done: - menu screen done to do: - Make menu screen    - character selection    - song selection       - go to dance screen    - higscores of each song - Make character selection room - Make song selection room - Make higscore room - Make menu go to the right rooms

--- a/game/CMakeLists.txt
+++ b/game/CMakeLists.txt
@@ -6,6 +6,8 @@ add_executable(${PROJECT_NAME}.elf
         StartScene.cpp
         gbmap.h
         karakter.h
+        Menu.cpp
+        Menu.h
         )
 
 target_link_libraries(${PROJECT_NAME}.elf gba-sprite-engine)
