done: - Highscore screen done to do: - Make character selection room     - show choosen character on menu screen     - go to menu screen after choosing - Make song selection room    - after choosing song, go to dance mode - Make menu go to the right rooms    - chose character room    - chose song room - Add scores variables to highscore room

--- a/game/CMakeLists.txt
+++ b/game/CMakeLists.txt
@@ -8,6 +8,8 @@ add_executable(${PROJECT_NAME}.elf
         karakter.h
         Menu.cpp
         Menu.h
+        Highscore.cpp
+        Highscore.h
         )
 
 target_link_libraries(${PROJECT_NAME}.elf gba-sprite-engine)
