done: - fixed text issue (f*cking finally) to do: - Make menu screen    - character selection    - song selection       - go to dance screen         -dance one done         -dance 2 to do         -dance 3 to do - Make character selection room - finish song selection room - finish higscore room - Make menu go to the right rooms    - Character room    - Song room - game mechanics   - make room   - make text scroll   - scoring system

--- a/game/CMakeLists.txt
+++ b/game/CMakeLists.txt
@@ -15,6 +15,8 @@ add_executable(${PROJECT_NAME}.elf
         song1.cpp
         song1.h
         danceroom1.h
+        song2.cpp
+        song2.h
         )
 
 target_link_libraries(${PROJECT_NAME}.elf gba-sprite-engine)
