done: -Highscore room done -made game better by combining the songs code's -menu goes to the right rooms to do: -add sprite in menu -add music in start en menu scene (- maybe create better backgrounds if drawing talent permits it)

--- a/game/CMakeLists.txt
+++ b/game/CMakeLists.txt
@@ -15,11 +15,9 @@ add_executable(${PROJECT_NAME}.elf
         song1.cpp
         song1.h
         danceroom1.h
-        song2.cpp
-        song2.h
-        song3.cpp
-        song3.h
         music1.h
+        data.h
+        data.cpp
         )
 
 target_link_libraries(${PROJECT_NAME}.elf gba-sprite-engine)
